--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,19 @@ version: '3.9'
 services:
   postgresql:
     image: postgres:12.11-alpine
-    restart: always
+    #restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=0123456789012345
       - POSTGRES_HOST_AUTH_METHOD=trust
-    command: ["-c ssl=on", "-c ssl_cert_file=/var/lib/pgsql/server.crt", "-c ssl_key_file=/var/lib/pgsql/server.key"]
+    #command: ["postgres", "-c ssl=on", "-c ssl_cert_file = /var/lib/postgresql/server.crt", "-c ssl_key_file = /var/lib/postgresql/server.key"]
     ports:
-      - '5432:5432'
+      - "5432:5432"
     volumes: 
-      - db:/var/lib/pgsql/data
-      - /tmp:/var/lib/pgsql/data
-      - ./server.crt:/var/lib/pgsql/server.crt:ro
-      - ./server.key:/var/lib/pgsql/server.key:ro
+      - "db:/var/lib/postgresql/data"
+      - "/mnt/c/DevOps/postgresql/data/:/var/lib/postgresql/data"
+      - "/mnt/c/DevOps/postgresql/tmp/server.crt:/var/lib/postgresql/server.crt:ro"
+      - "/mnt/c/DevOps/postgresql/tmp/server.key:/var/lib/postgresql/server.key:ro"
       #d- ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
 volumes:
   db:
